[tool.poetry]
name = "math-tutor-backend"
version = "0.1.0"
description = "AI Math Tutor - LangGraph Backend Service"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"

# --- The Modern AI Stack (Compatible Versions) ---
# We align everything to LangChain 0.3+ / LangGraph 0.2+
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-google-genai = "^2.0.0"
google-generativeai = "^0.8.0"
langgraph = "^0.2.20"
langgraph-checkpoint-postgres = "^2.0.0"

# --- Database & Utils ---
psycopg2-binary = "^2.9.9"
psycopg-pool = "^3.2.0"
httpx = "^0.27.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

